--- a/war/css/Application/Global.css
+++ b/war/css/Application/Global.css
@@ -4,6 +4,10 @@
   
 }
 
+input.highlight-red {
+  box-shadow: 0px 0px 2px 0px #FD0000;
+}
+
 .embossed-heavy {
     border: 1px solid rgba(0,0,0,0.05);
     box-shadow: 
