Added skeleton to Loan

--- a/war/css/Application/ContactDetails.css
+++ b/war/css/Application/ContactDetails.css
@@ -133,7 +133,7 @@ div.contact-details div.contact-details-container-col ul.email-list {
 	margin: 0px;
 }
 
-div.contact-details div.contact-details-container-col div.seconday.email-list-div ul.email-list li div.field-icon i {
+div.contact-details div.contact-details-container-col div.secondary.email-list-div ul.email-list li div.field-icon i {
 	/* display: none; */
 }
 
